Docs for detailed project request
