# routes/api.php
@@ -15,6 +15,8 @@ Route::prefix('core')->group(function() {
 
         Route::prefix('projects')->group(function(){
             Route::get('', 'Core\Account\ProjectsController@index')->name('core.account.projects.index');
+            Route::get('/{project}', 'Core\Account\ProjectsController@show')->name('core.account.projects.show');
+
             Route::post('', 'Core\Account\ProjectsController@create')->name('core.account.projects.create');
         });
     });
